--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <canvas id="myChart" width="400" height="400"></canvas>
+    <canvas id="forkChart" width="400" height="400"></canvas>
+    <canvas id="watchersChart" width="400" height="400"></canvas>
+    <canvas id="starsChart" width="400" height="400"></canvas>
   </body>
 </html>
