--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <canvas id="forkChart" width="400" height="400"></canvas>
     <canvas id="watchersChart" width="400" height="400"></canvas>
     <canvas id="starsChart" width="400" height="400"></canvas>
+    <canvas id="overallChart" width="400" height="400"></canvas>
   </body>
 </html>
